tests/fail/fail_borrow_move.tk
shape Point (x: i32)

fn main() -> i32 {
    auto ^p = new Point(x = 10)
    auto &y = &p
    auto z = ^p // Error: cannot move p while it is borrowed
    return 0
}
